"""
https://registry.bazel.build
https://github.com/bazel-contrib/toolchains_llvm/releases
https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
"""
module(name = "mfem", version = "0.1")

bazel_dep(name = "rules_cc", version = "0.0.10")

bazel_dep(name = "toolchains_llvm", version = "1.1.2")
git_override(
    module_name = "toolchains_llvm",
    commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# External dependencies
external = use_extension("//config/bazel:external.bzl", "external")
use_repo(external, "mpi")
use_repo(external, "hypre")
use_repo(external, "metis")
use_repo(external, "config")
