"""
https://registry.bazel.build
"""
module(name = "mfem", version = "0.1")

bazel_dep(name = "rules_cc", version = "0.0.16")

# https://github.com/bazel-contrib/toolchains_llvm/releases
# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
bazel_dep(name = "toolchains_llvm", version = "1.2.0")
git_override(
    module_name = "toolchains_llvm",
    commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
# x86_64-linux-gnu-ubuntu-20.04     13.0.0  
# x86_64-linux-gnu-ubuntu-22.04     17.0.6
# macOS                             17.0.6
llvm.toolchain(llvm_version = "17.0.6", stdlib = {"linux-x86_64": "stdc++"}) # libc++ / stdc++
    
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# https://github.com/bazelbuild/bazel-skylib/releases
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# External dependencies
external = use_extension("//config/bazel:external.bzl", "external")
use_repo(external, "mpi")
use_repo(external, "hypre")
use_repo(external, "metis")
use_repo(external, "config")
