"""
Bazel Central Registry: https://registry.bazel.build
"""
module(name = "mfem", version = "4.7")

# https://github.com/bazelbuild/rules_cc
# https://registry.bazel.build/modules/rules_cc
bazel_dep(name = "rules_cc", version = "0.1.1")

# https://github.com/bazel-contrib/toolchains_llvm/releases
# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
# llvm.toolchain(llvm_version = "16.0.0")
llvm.toolchain(llvm_version = "18.1.8")
# x86_64-linux-gnu-ubuntu-20.04     13.0.0
# x86_64-linux-gnu-ubuntu-22.04     17.0.6
# macOS                             17.0.6
# llvm.toolchain(llvm_version = "17.0.6", stdlib = {"linux-x86_64": "stdc++"}) # libc++ / stdc++

use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# https://github.com/bazelbuild/bazel-skylib/releases
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# External dependencies
external = use_extension("//config/bazel:external.bzl", "external")
use_repo(external, "mpi")
use_repo(external, "hypre")
use_repo(external, "metis")
use_repo(external, "config")


